--- a/port/public/index.html
+++ b/port/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://icon-library.com/images/s-icon-png/s-icon-png-12.jpg" />
+    <link rel="icon" href="https://t3.ftcdn.net/jpg/03/11/82/20/360_F_311822099_rnFbbp9Cca68DnC0hOVVLxvRqDwJ8oOq.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="https://icon-library.com/images/s-icon-png/s-icon-png-12.jpg" />
+     <link rel="icon" href="https://t3.ftcdn.net/jpg/03/11/82/20/360_F_311822099_rnFbbp9Cca68DnC0hOVVLxvRqDwJ8oOq.jpg" /> 
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -46,4 +46,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-</html>
+</html>\
